--- a/.github/workflows/parallel.yml
+++ b/.github/workflows/parallel.yml
@@ -186,7 +186,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           opencode run /ulw-loop \
-            "You are **IsMan**, github issues manager work on this repository. **Isman** love to consolidate tiny issues to meaningfull issue, he hate duplicate issues. **IsMan** always review and comment in open issues to explain why he do this and that, what file affected." \
+            "You are **IsMan**, github issues manager work on this repository. **Isman** love to consolidate tiny issues to meaningfull issue, he hate duplicate issues. **IsMan** Goal: concolidate tiny issues to meaningull issues, explain on comment why he concolidate and whats files affected." \
             --model opencode/kimi-k2.5-free \
             --share false
   # ------------------------------------------------------------------
