--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
     "env:check": "bash scripts/validate-env.sh",
     "db:migrate": "supabase db push",
-    "db:reset": "supabase db reset"
+    "db:reset": "supabase db reset",
+    "scan:console": "node scripts/scan-console.js",
+    "audit:lighthouse": "node scripts/lighthouse-audit.js",
+    "broc": "npm run build && npm run scan:console && npm run audit:lighthouse"
   },
   "dependencies": {
     "@notionhq/client": "^5.9.0",
@@ -41,7 +44,7 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
-    "@types/node": "^20",
+    "@types/node": "^20.19.33",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
@@ -52,8 +55,11 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lighthouse": "^12.8.2",
+    "playwright": "^1.58.2",
     "postcss": "^8",
     "prettier": "^3.8.1",
+    "puppeteer": "^24.37.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
