fix(deployment): add critical Cloudflare build configuration
- Add [build] section with command, cwd, and watch_dir settings
- Add environment-specific naming for production and staging
- Add build.upload section with service-worker format
- Add routes configuration for Next.js deployment
- Replace placeholder comments with actual configuration

This change enables successful Cloudflare Pages deployment by providing
the required build configuration that was previously missing. Without
this configuration, deployments fail due to missing build command and
environment-specific settings.

Affected files/components:
- wrangler.toml

Closes #465

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,8 +5,15 @@ compatibility_flags = ["nodejs_compat"]
 # Cloudflare Pages configuration for Next.js
 pages_build_output_dir = ".next"
 
+# Build configuration - Critical for Cloudflare Pages deployment
+[build]
+command = "npm run build"
+cwd = "."
+watch_dir = "src"
+
+# Environment-specific configurations
 [env.production]
-name = "ai-first"
+name = "ai-first-production"
 
 [env.staging] 
 name = "ai-first-staging"
@@ -20,6 +27,11 @@ name = "ai-first-staging"
 [env.staging.vars]
 # Set via Cloudflare dashboard: NEXT_PUBLIC_APP_URL
 
-# For Cloudflare Pages deployment
-# Build command should be: npm run build
-# Output directory should be: .next
+# Build optimization settings
+[build.upload]
+format = "service-worker"
+
+# Route configuration for Next.js
+[[routes]]
+pattern = "/*"
+custom_domain = true
