chore: add SWC cache to .gitignore and update maintenance report
- Added .swc/ to .gitignore to prevent SWC compiler cache tracking
- Cleaned build artifacts from working directory (tsconfig.tsbuildinfo, .swc/)
- Updated repokeeper-report-2026-02.md with latest maintenance findings
- Verified documentation freshness (all docs up to date)
- Confirmed archive file intentionally tracked (optimization from Feb 7)

AGENT=RepoKeeper

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ dist/
 *.tsbuildinfo
 # next-env.d.ts should be committed - see Next.js docs
 
+# SWC (Next.js compiler cache)
+.swc/
+
 # IDE
 .vscode/
 .idea/
