--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lighthouse": "^12.8.2",
+    "oh-my-opencode": "^3.4.0",
     "playwright": "^1.58.2",
     "postcss": "^8",
     "prettier": "^3.8.1",
