--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "prettier": "^3.8.1",
     "puppeteer": "^24.37.2",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   },
   "overrides": {
