--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
@@ -62,7 +63,6 @@
     "prettier": "^3.8.1",
     "puppeteer": "^24.37.2",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   },
   "overrides": {
