fix(accessibility): resolve label mismatch and add browserslist config
AGENT=BroCula

- Fix accessible name mismatch in ClarificationFlow text input
  Change generic 'Your answer' label to use actual question text
- Add browserslist configuration to target modern browsers
  Reduces legacy JavaScript polyfills in production builds

Lighthouse improvements:
- Accessibility: Fixed label-content-name-mismatch error on /clarify
- Best Practices: Browserslist reduces legacy JavaScript

Console scan: 0 errors, 0 warnings across all pages
Build: ✓ Pass
Lint: ✓ Pass
Type-check: ✓ Pass

--- a/package.json
+++ b/package.json
@@ -68,5 +68,18 @@
   "overrides": {
     "glob": "^10.5.0",
     "test-exclude": "^7.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">= 0.5%",
+      "last 2 major versions",
+      "not dead",
+      "not IE 11"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
