chore: cleanup generated report files and update .gitignore
- Remove console-scan-report.json (temporary generated file)
- Remove lighthouse-report.json (temporary generated file)
- Update .gitignore to exclude generated report files
- Update repokeeper maintenance report

AGENT=RepoKeeper

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ Thumbs.db
 *.log
 task_plan.md
 
+# Generated reports
+console-scan-report.json
+lighthouse-report.json
+
 # Runtime data
 pids
 *.pid
