--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ Thumbs.db
 *.log
 task_plan.md
 
+# Generated reports (by npm scripts)
+console-scan-report.json
+lighthouse-report.json
+
 # Runtime data
 pids
 *.pid
