--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,16 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react-hooks/recommended"
+    "plugin:react-hooks/recommended",
+    "plugin:react/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "react-hooks"],
+  "plugins": ["@typescript-eslint", "react-hooks", "react"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "root": true,
   "env": {
     "browser": true,
@@ -31,6 +37,7 @@
     "test": "readonly"
   },
   "rules": {
+    "react/react-in-jsx-scope": "off",
     "react/no-unescaped-entities": "off",
     "react-hooks/exhaustive-deps": "warn",
     "@typescript-eslint/no-unused-vars": [
