--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "build:check": "npm run env:check && npm run build",
     "start": "next start",
-    "lint": "eslint src tests --ext .ts,.tsx --max-warnings=50",
+    "lint": "eslint src tests --ext .ts,.tsx --max-warnings=0",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -23,7 +23,8 @@
     "db:reset": "supabase db reset",
     "scan:console": "node scripts/scan-console.js",
     "audit:lighthouse": "node scripts/lighthouse-audit.js",
-    "broc": "npm run build && npm run scan:console && npm run audit:lighthouse"
+    "broc": "npm run build && npm run scan:console && npm run audit:lighthouse",
+    "analyze": "ANALYZE=true npm run build"
   },
   "dependencies": {
     "@notionhq/client": "^5.9.0",
@@ -41,6 +42,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.1.6",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
@@ -53,6 +55,7 @@
     "autoprefixer": "^10.4.24",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.35",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -64,6 +67,10 @@
     "puppeteer": "^24.37.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "overrides": {
     "glob": "^13.0.0",
