--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,7 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:react/recommended"
-  ],
+  "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "react-hooks", "react"],
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
+  "plugins": ["@typescript-eslint"],
   "root": true,
   "env": {
     "browser": true,
@@ -37,9 +27,6 @@
     "test": "readonly"
   },
   "rules": {
-    "react/react-in-jsx-scope": "off",
-    "react/no-unescaped-entities": "off",
-    "react-hooks/exhaustive-deps": "warn",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
