feat(config): add environment-based configuration system
Add comprehensive environment variable support for all hardcoded values:

- Create src/lib/config/environment.ts with type-safe env loader
- Support 50+ environment variables for runtime configuration
- Add validation with min/max bounds and sensible defaults
- Update config/index.ts to export ENV_CONFIG alongside legacy exports
- Document all env vars in config/.env.example
- Maintain 100% backward compatibility

Addresses issues:
- #981: Hardcoded API timeouts
- #982: Hardcoded cache TTL values
- #983: Hardcoded rate limiting thresholds
- #984: Hardcoded retry configuration
- #985: Hardcoded UI timing constants
- #986: Environment variable support

AGENT=CMZ

--- a/config/.env.example
+++ b/config/.env.example
@@ -55,3 +55,62 @@ ADMIN_API_KEY=your-admin-api-key-for-protected-routes
 
 # CORS Configuration (comma-separated list of allowed origins)
 ALLOWED_ORIGINS=http://localhost:3000,https://yourdomain.com
+
+# ==========================================
+# CONFIGURATION OVERRIDES (Optional)
+# ==========================================
+# All values have sensible defaults. Only set these if you need to customize.
+# See: src/lib/config/environment.ts for all available options
+
+# API Timeouts (milliseconds)
+# API_TIMEOUT_DEFAULT=30000
+# API_TIMEOUT_QUICK=5000
+# API_TIMEOUT_STANDARD=10000
+# API_TIMEOUT_LONG=30000
+
+# Rate Limiting
+# RATE_LIMIT_DEFAULT_RATE=100
+# RATE_LIMIT_DEFAULT_WINDOW=60000
+# RATE_LIMIT_TIER_FREE_RATE=10
+# RATE_LIMIT_TIER_STANDARD_RATE=100
+# RATE_LIMIT_TIER_PREMIUM_RATE=1000
+
+# Retry Configuration
+# RETRY_DEFAULT_MAX_RETRIES=3
+# RETRY_INITIAL_DELAY=1000
+# RETRY_MAX_DELAY=10000
+# RETRY_BACKOFF_MULTIPLIER=2
+# RETRY_ENABLE_JITTER=true
+
+# Cache Configuration
+# CACHE_TTL_SHORT=60000
+# CACHE_TTL_STANDARD=300000
+# CACHE_TTL_MEDIUM=600000
+# CACHE_TTL_LONG=3600000
+# CACHE_SIZE_SMALL=50
+# CACHE_SIZE_STANDARD=100
+# CACHE_SIZE_LARGE=1000
+
+# UI Timing (milliseconds)
+# UI_TOAST_DURATION=3000
+# UI_ANIMATION_FAST=200
+# UI_ANIMATION_STANDARD=300
+# UI_ANIMATION_SLOW=500
+
+# Validation
+# VALIDATION_MAX_ANSWER_LENGTH=5000
+# VALIDATION_MIN_IDEA_LENGTH=10
+# VALIDATION_MAX_IDEA_LENGTH=10000
+# VALIDATION_MAX_REQUEST_BODY_SIZE=1048576
+
+# AI Service
+# AI_DEFAULT_MAX_TOKENS=4000
+# AI_DEFAULT_DAILY_COST_LIMIT=10.0
+# AI_RESPONSE_CACHE_TTL_MS=300000
+
+# Resilience
+# RESILIENCE_RETRY_DEFAULT_MAX_RETRIES=3
+# RESILIENCE_CB_DEFAULT_FAILURE_THRESHOLD=5
+# RESILIENCE_CB_DEFAULT_RESET_TIMEOUT_MS=60000
+# RESILIENCE_TIMEOUT_OPENAI=60000
+# RESILIENCE_TIMEOUT_DATABASE=10000
