chore: remove archive backup from repository
Archive backups should not be committed to version control.
Removes 144KB backup file from docs/archive/.

Ultraworked with Sisyphus

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,9 @@ __pycache__/
 .jules/
 .Jules/
 .sisyphus/
+
+# Archive backups (should not be committed)
+docs/archive/*.gz
+docs/archive/*.zip
+docs/archive/*.tar
+docs/archive/*.tar.gz
