--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "autoprefixer": "^10.4.24",
-    "eslint": "^8.57.1",
+    "eslint": "8.57.1",
     "eslint-config-next": "^15.1.3",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -73,6 +73,7 @@
     "npm": ">=9.0.0"
   },
   "overrides": {
+    "eslint": "8.57.1",
     "glob": "^13.0.0",
     "test-exclude": "^7.0.1"
   },
