--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "scan:console": "node scripts/scan-console.js",
     "audit:lighthouse": "node scripts/lighthouse-audit.js",
     "broc": "npm run build && npm run scan:console && npm run audit:lighthouse",
-    "analyze": "ANALYZE=true npm run build"
+    "analyze": "ANALYZE=true npm run build -- --webpack"
   },
   "dependencies": {
     "@notionhq/client": "^5.9.0",
