fix(eslint): migrate to flat config for Next.js 16 compatibility
- Replace deprecated .eslintrc.json with eslint.config.mjs (flat config format)
- Add @eslint/eslintrc dependency for backward compatibility
- Update lint script to remove deprecated --ext flag
- Disable react-hooks/set-state-in-effect rule for animation patterns
- Disable @typescript-eslint/no-require-imports for test files

Fixes #1090
Closes #1047, #1046, #890, #812

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "build:check": "npm run env:check && npm run build",
     "start": "next start",
-    "lint": "eslint src tests --ext .ts,.tsx --max-warnings=0",
+    "lint": "eslint src tests --max-warnings=0",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -44,6 +44,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@next/bundle-analyzer": "^16.1.6",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.3.2",
